responsive settin in dark mode and following bug fixes

--- a/public/stylesheets/darkTheme/darkProfile.css
+++ b/public/stylesheets/darkTheme/darkProfile.css
@@ -52,7 +52,7 @@
 }
 
 #editBox .editForm #crossBtn:hover{
-    background-color: red;
+    /* background-color: red; */
     color: #fff;
 }
 
@@ -156,10 +156,11 @@
     font-size: 1.5rem;
     color: rgb(255, 43, 43);;
     transition: .3s;
+    cursor: pointer;
 }
 
 #editProfileBox .editForm #closeProfileBtn:hover{
-    background-color: red;
+    /* background-color: red; */
     color: #fff;
 }
 
@@ -286,7 +287,7 @@
 }
 
 #showFollowBox .followMain #closeFollowBtn:hover{
-    background-color: red;
+    /* background-color: red; */
     color: #fff;
 }
 
