--- a/public/stylesheets/profile.css
+++ b/public/stylesheets/profile.css
@@ -51,7 +51,7 @@
 }
 
 #editBox .editForm #crossBtn:hover {
-    background-color: red;
+    /* background-color: red; */
     color: #fff;
 }
 
@@ -156,7 +156,7 @@
 }
 
 #editProfileBox .editForm #closeProfileBtn:hover {
-    background-color: red;
+    /* background-color: red; */
     color: #fff;
 }
 
@@ -282,7 +282,7 @@
 }
 
 #showFollowBox .followMain #closeFollowBtn:hover{
-    background-color: red;
+    /* background-color: red; */
     color: #fff;
 }
 
