--- a/public/stylesheets/settings.css
+++ b/public/stylesheets/settings.css
@@ -359,7 +359,7 @@
         align-items: center;
         gap: 1vmax;
         padding-left: 2vmax;
-        font-size: 2vmax;
+        font-size: 2.3vmax;
 
         a {
           height: 100%;
